# Lugatcha

./: .env  .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
docs/culture/: 01-history.md  02-society-and-institutions.md  03-people.md  04-daily-life.md  05-cuisine.md  06-customs-and-etiquette.md
docs/language/: 01-overview.md  02-writing-systems.md  03-pronunciation.md  04-grammar.md  05-vocabulary.md  06-challenges-for-english-speakers.md  07-phrasebook.md
public/audio/: manifest.json
public/data/: locations.json  manifest.json  spoken-words.json  travel.json  uzbekistan.geo.json
scripts/: apply_reviews.py  backfill-cyrillic.ts  build-uz-map.mjs  build_yandex_audio.sh  generate_audio.py  offline-smoke.mjs  tokenize-roleplay.mjs
src/: App.vue  env.d.ts  main.ts  streak.ts
src/assets/: main.css
src/audio/: audio.ts  key.ts  offline.ts  review.ts
src/components/: AppLogo.vue  (+20 more)
tests/: audio-key-fixtures.json  audio-key.spec.ts  backup.spec.ts  content-picker.spec.ts  content.spec.ts  db.spec.ts  errors.spec.ts  fatal-screen.spec.ts  feedback.spec.ts  groups.spec.ts  lessons.spec.ts  numbers.spec.ts  phrases.spec.ts  potluck.spec.ts  practice-session.spec.ts  progression.spec.ts  sequence.spec.ts  setup.ts  spaced-repetition.spec.ts  streak.spec.ts  test-exercise.spec.ts  transliterate.spec.ts  travel.spec.ts  validate.spec.ts  welcome.spec.ts  words.spec.ts
(+168 files in other folders)
