[project]
name = "lugatcha-audio"
version = "0.1.0"
description = "Local audio generation tooling for Lugatcha."
requires-python = ">=3.10"
dependencies = [
  "soundfile",
  "torch",
  "transformers",
  "qwen-tts",
  "silero-vad",
  "yandexcloud>=0.394.0",
  "grpcio>=1.81.1",
]

[tool.uv]
package = false
